--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,15 +9,68 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <!-- Custom CSS -->
+    <link href="/css/style.css" rel="stylesheet">
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+
+    <title>The Herald</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+
+    <div class='container-fluid bg-light'>
+      
+      <div class='row'>
+        <div class='col d-flex flex-column py-3'>
+          <h1 class='mx-auto my-3'>The Herald</h1>
+          <h2 class='mx-auto my-3'>Welcome to the town square.</h2>
+          <div class='d-flex flex-row my-3 mx-auto justify-content-center'>
+            <button class='btn btn-lg btn-dark get-btn mx-1'>Get News</button>
+            <button class='btn btn-lg btn-dark delete-btn mx-1'>Clear News</button>
+          </div>
+        </div>
+      </div>
+
+      <div class='row'>
+        <div class='col d-flex flex-column py-3'>
+          {{{body}}}
+        </div>
+      </div>
+
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    <script>
+
+      $('.get-btn').on('click', function() {
+        $.ajax({
+          url: '/new-articles',
+          method: 'GET',
+          success: function(data) {
+            setTimeout(function() {
+              window.location.href = data.redirectURL;
+            }, 2000);          
+          }
+        });
+      });
+
+      $('.delete-btn').on('click', function() {
+        $.ajax({
+          url: '/clear-articles',
+          method: 'DELETE',
+          success: function(data) {
+            window.location.href = data.redirectURL;
+          }
+        });
+      });
+
+    </script>
+
   </body>
 </html>
