finished MVC for comments except delete comment

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,12 +1,31 @@
 
 {{#each articles}}
 
-    <div class='card text-center my-3 mx-auto w-75'>
+    <div class='card article-container text-center my-3 mx-auto w-75'>
         <h4 class='card-header bg-dark text-white'>{{title}}</h4>
         <h5 class='m-2'>{{synopsis}}</h5>
         <div class='m-2'>
             <button class='btn btn-md btn-dark' onclick="window.location.href='{{link}}';">Full Story</button>
-            <button class='btn btn-md btn-dark comment-btn'>Comments</button>
+            <button class='btn btn-md btn-dark comment-btn' id='{{_id}}-unique' data-status='closed'>Comments</button>
+        </div>
+        <div class='card comments-section d-none m-2 p-2 {{_id}}-unique'>
+
+            {{#each messages}}
+
+                <div class='d-flex flex-row my-2 w-100'>
+                    <h6 class='my-auto ml-3 mr-auto'>{{this}}</h6>
+                    <button class='btn btn-dark x-btn ml-auto mr-3'>X</button>
+                </div>
+
+            {{/each}}
+
+            <form class='mt-2'>
+                <div class="form-group">
+                    <textarea class="form-control text-center {{_id}}" rows='1' placeholder="Enter your comment here."></textarea>
+                </div>
+                <button class="btn btn-dark submit-comment" id="{{_id}}">Submit</button>
+            </form>
+
         </div>
     </div>
 
