--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,10 @@ body {
     font-family: 'Raleway', sans-serif;
 }
 
-.card {
+.article-container {
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+.x-btn {
+    font-size: 10px;
 }
