--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -6,22 +6,22 @@
         <h5 class='m-2'>{{synopsis}}</h5>
         <div class='m-2'>
             <button class='btn btn-md btn-dark' onclick="window.location.href='{{link}}';">Full Story</button>
-            <button class='btn btn-md btn-dark comment-btn' id='{{_id}}-unique' data-status='closed'>Comments</button>
+            <button class='btn btn-md btn-dark comment-btn' id='{{_id}}' data-status='closed'>Comments</button>
         </div>
-        <div class='card comments-section d-none m-2 p-2 {{_id}}-unique'>
+        <div class='card comments-section d-none m-2 p-2' id='{{_id}}-allComments'>
 
             {{#each messages}}
 
                 <div class='d-flex flex-row my-2 w-100'>
                     <h6 class='my-auto ml-3 mr-auto'>{{this}}</h6>
-                    <button class='btn btn-dark x-btn ml-auto mr-3'>X</button>
+                    <button class='btn btn-dark x-btn ml-auto mr-3' data-commentID='{{../_id}}' data-commentText='{{this}}'>X</button>
                 </div>
 
             {{/each}}
 
             <form class='mt-2'>
                 <div class="form-group">
-                    <textarea class="form-control text-center {{_id}}" rows='1' placeholder="Enter your comment here."></textarea>
+                    <textarea class="form-control text-center" id="{{_id}}-textArea" rows='1' placeholder="Enter your comment here."></textarea>
                 </div>
                 <button class="btn btn-dark submit-comment" id="{{_id}}">Submit</button>
             </form>
